src/Antlr/dartParser.java
// Generated from C:/compailer/first_try/src/Antlr\dartParser.g4 by ANTLR 4.10.1
package Antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class dartParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AT=1, C=2, CB=3, CBC=4, CO=5, CP=6, DOT=7, EE=8, EG=9, EQ=10, GT=11, LT=12, 
		LTE=13, LTLT=14, MINUS=15, MM=16, NE=17, NOT=18, OB=19, OBC=20, OP=21, 
		P=22, PC=23, PE=24, PL=25, ASTERISK=26, PLE=27, PLPL=28, PO=29, POE=30, 
		PP=31, QU=32, QUQU=33, SC=34, SL=35, ABSTRACT_=36, AS_=37, ASSERT_=38, 
		ASYNC_=39, AWAIT_=40, BOOLEAN=41, BREAK_=42, CASE_=43, CATCH_=44, CHAR=45, 
		CLASS_=46, CONST_=47, CONTINUE_=48, DEFAULT_=49, DO_=50, DOUBLE=51, DYNAMIC_=52, 
		ELSE_=53, ENUM_=54, EXTENDS_=55, FALSE_=56, FINAL_=57, FLOAT=58, FOR_=59, 
		FUNCTION_=60, IF_=61, IMPLEMENTS_=62, IMPORT_=63, INT=64, LONG=65, INTERFACE_=66, 
		IS_=67, LATE_=68, NEW_=69, NULL_=70, ON_=71, PUBLIC_=72, PACKAGE_=73, 
		PROTECTED_=74, PRIVATE_=75, REQUIRED_=76, RETURN_=77, STATIC_=78, STRING_=79, 
		SWITCH_=80, SYNC_=81, SUPER_=82, THIS_=83, THROW_=84, TRUE_=85, TRY_=86, 
		VAR_=87, VOID_=88, WHILE_=89, Scaffold_WIDGET=90, APPBAR_HEAD=91, BODY_HEAD=92, 
		CHILD_HEAD=93, APPBAR_WIDGET=94, TITLE=95, TEXT_WIDGET=96, CONTAINER_WIDGET=97, 
		NUMBER=98, CHAR_LITERAL=99, STRING_LITERAL=100, IDENTIFIER=101, WHITESPACE=102, 
		SINGLE_LINE_COMMENT=103, MULTI_LINE_COMMENT=104;
	public static final int
		RULE_compilationUnit = 0, RULE_packageDeclaration = 1, RULE_importDeclaration = 2, 
		RULE_classOrInterfaceModifier = 3, RULE_classDeclaration = 4, RULE_classBodyDeclaration = 5, 
		RULE_localVariableDeclaration = 6, RULE_variableDeclarators = 7, RULE_variableDeclarator = 8, 
		RULE_program = 9, RULE_methodDeclaration = 10, RULE_methodBody = 11, RULE_formalParameters = 12, 
		RULE_formalParameter = 13, RULE_statement = 14, RULE_expression = 15, 
		RULE_expressionList = 16, RULE_literal = 17, RULE_nullLiteral = 18, RULE_booleanLiteral = 19, 
		RULE_numericLiteral = 20, RULE_charLiteral = 21, RULE_stringLiteral = 22, 
		RULE_primitiveType = 23, RULE_block = 24, RULE_parExpression = 25, RULE_forControl = 26, 
		RULE_forInit = 27, RULE_elementValue = 28, RULE_elementValueArrayInitializer = 29, 
		RULE_qualifiedName = 30, RULE_scaffold = 31, RULE_widget = 32, RULE_appBar = 33, 
		RULE_text = 34, RULE_container = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "packageDeclaration", "importDeclaration", "classOrInterfaceModifier", 
			"classDeclaration", "classBodyDeclaration", "localVariableDeclaration", 
			"variableDeclarators", "variableDeclarator", "program", "methodDeclaration", 
			"methodBody", "formalParameters", "formalParameter", "statement", "expression", 
			"expressionList", "literal", "nullLiteral", "booleanLiteral", "numericLiteral", 
			"charLiteral", "stringLiteral", "primitiveType", "block", "parExpression", 
			"forControl", "forInit", "elementValue", "elementValueArrayInitializer", 
			"qualifiedName", "scaffold", "widget", "appBar", "text", "container"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@'", "','", "']'", "'}'", "':'", "')'", "'.'", "'=='", null, 
			"'='", "'>'", "'<'", null, "'<<'", "'-'", "'--'", "'!='", "'!'", "'['", 
			"'{'", "'('", "'|'", "'%'", "'%='", "'+'", "'*'", "'+='", "'++'", "'#'", 
			"'|='", "'||'", "'?'", "'??'", "';'", "'/'", "'abstract'", "'as'", "'assert'", 
			"'async'", "'await'", "'bool'", "'break'", "'case'", "'catch'", "'char'", 
			"'class'", "'const'", "'continue'", "'default'", "'do'", "'double'", 
			"'dynamic'", "'else'", "'enum'", "'extends'", "'false'", "'final'", "'float'", 
			"'for'", "'Function'", "'if'", "'implements'", "'import'", "'int'", "'long'", 
			"'interface'", "'is'", "'late'", "'new'", "'null'", "'on'", "'public'", 
			"'package'", "'protected'", "'private'", "'required'", "'return'", "'static'", 
			"'String'", "'switch'", "'sync'", "'super'", "'this'", "'throw'", "'true'", 
			"'try'", "'var'", "'void'", "'while'", "'Scaffold'", "'appBar'", "'body'", 
			"'child'", "'AppBar'", "'title'", "'Text'", "'Container'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AT", "C", "CB", "CBC", "CO", "CP", "DOT", "EE", "EG", "EQ", "GT", 
			"LT", "LTE", "LTLT", "MINUS", "MM", "NE", "NOT", "OB", "OBC", "OP", "P", 
			"PC", "PE", "PL", "ASTERISK", "PLE", "PLPL", "PO", "POE", "PP", "QU", 
			"QUQU", "SC", "SL", "ABSTRACT_", "AS_", "ASSERT_", "ASYNC_", "AWAIT_", 
			"BOOLEAN", "BREAK_", "CASE_", "CATCH_", "CHAR", "CLASS_", "CONST_", "CONTINUE_", 
			"DEFAULT_", "DO_", "DOUBLE", "DYNAMIC_", "ELSE_", "ENUM_", "EXTENDS_", 
			"FALSE_", "FINAL_", "FLOAT", "FOR_", "FUNCTION_", "IF_", "IMPLEMENTS_", 
			"IMPORT_", "INT", "LONG", "INTERFACE_", "IS_", "LATE_", "NEW_", "NULL_", 
			"ON_", "PUBLIC_", "PACKAGE_", "PROTECTED_", "PRIVATE_", "REQUIRED_", 
			"RETURN_", "STATIC_", "STRING_", "SWITCH_", "SYNC_", "SUPER_", "THIS_", 
			"THROW_", "TRUE_", "TRY_", "VAR_", "VOID_", "WHILE_", "Scaffold_WIDGET", 
			"APPBAR_HEAD", "BODY_HEAD", "CHILD_HEAD", "APPBAR_WIDGET", "TITLE", "TEXT_WIDGET", 
			"CONTAINER_WIDGET", "NUMBER", "CHAR_LITERAL", "STRING_LITERAL", "IDENTIFIER", 
			"WHITESPACE", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "dartParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public dartParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CompilationUnitContext extends ParserRuleContext {
		public PackageDeclarationContext packageDeclaration() {
			return getRuleContext(PackageDeclarationContext.class,0);
		}
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<TerminalNode> SC() { return getTokens(dartParser.SC); }
		public TerminalNode SC(int i) {
			return getToken(dartParser.SC, i);
		}
		public List<ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public List<ClassOrInterfaceModifierContext> classOrInterfaceModifier() {
			return getRuleContexts(ClassOrInterfaceModifierContext.class);
		}
		public ClassOrInterfaceModifierContext classOrInterfaceModifier(int i) {
			return getRuleContext(ClassOrInterfaceModifierContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PACKAGE_) {
				{
				setState(72);
				packageDeclaration();
				}
			}

			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(77);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case IMPORT_:
						{
						setState(75);
						importDeclaration();
						}
						break;
					case SC:
						{
						setState(76);
						match(SC);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 34)) & ~0x3f) == 0 && ((1L << (_la - 34)) & ((1L << (SC - 34)) | (1L << (ABSTRACT_ - 34)) | (1L << (CLASS_ - 34)) | (1L << (FINAL_ - 34)) | (1L << (PUBLIC_ - 34)) | (1L << (PROTECTED_ - 34)) | (1L << (PRIVATE_ - 34)) | (1L << (STATIC_ - 34)))) != 0)) {
				{
				setState(90);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ABSTRACT_:
				case CLASS_:
				case FINAL_:
				case PUBLIC_:
				case PROTECTED_:
				case PRIVATE_:
				case STATIC_:
					{
					setState(85);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (((((_la - 36)) & ~0x3f) == 0 && ((1L << (_la - 36)) & ((1L << (ABSTRACT_ - 36)) | (1L << (FINAL_ - 36)) | (1L << (PUBLIC_ - 36)) | (1L << (PROTECTED_ - 36)) | (1L << (PRIVATE_ - 36)) | (1L << (STATIC_ - 36)))) != 0)) {
						{
						{
						setState(82);
						classOrInterfaceModifier();
						}
						}
						setState(87);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(88);
					classDeclaration();
					}
					break;
				case SC:
					{
					setState(89);
					match(SC);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageDeclarationContext extends ParserRuleContext {
		public TerminalNode PACKAGE_() { return getToken(dartParser.PACKAGE_, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SC() { return getToken(dartParser.SC, 0); }
		public PackageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterPackageDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitPackageDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitPackageDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(PACKAGE_);
			setState(96);
			qualifiedName();
			setState(97);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclarationContext extends ParserRuleContext {
		public TerminalNode IMPORT_() { return getToken(dartParser.IMPORT_, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SC() { return getToken(dartParser.SC, 0); }
		public TerminalNode STATIC_() { return getToken(dartParser.STATIC_, 0); }
		public TerminalNode DOT() { return getToken(dartParser.DOT, 0); }
		public TerminalNode ASTERISK() { return getToken(dartParser.ASTERISK, 0); }
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitImportDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitImportDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(IMPORT_);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STATIC_) {
				{
				setState(100);
				match(STATIC_);
				}
			}

			setState(103);
			qualifiedName();
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(104);
				match(DOT);
				setState(105);
				match(ASTERISK);
				}
			}

			setState(108);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassOrInterfaceModifierContext extends ParserRuleContext {
		public TerminalNode PUBLIC_() { return getToken(dartParser.PUBLIC_, 0); }
		public TerminalNode PROTECTED_() { return getToken(dartParser.PROTECTED_, 0); }
		public TerminalNode PRIVATE_() { return getToken(dartParser.PRIVATE_, 0); }
		public TerminalNode STATIC_() { return getToken(dartParser.STATIC_, 0); }
		public TerminalNode ABSTRACT_() { return getToken(dartParser.ABSTRACT_, 0); }
		public TerminalNode FINAL_() { return getToken(dartParser.FINAL_, 0); }
		public ClassOrInterfaceModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classOrInterfaceModifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterClassOrInterfaceModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitClassOrInterfaceModifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitClassOrInterfaceModifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassOrInterfaceModifierContext classOrInterfaceModifier() throws RecognitionException {
		ClassOrInterfaceModifierContext _localctx = new ClassOrInterfaceModifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classOrInterfaceModifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_la = _input.LA(1);
			if ( !(((((_la - 36)) & ~0x3f) == 0 && ((1L << (_la - 36)) & ((1L << (ABSTRACT_ - 36)) | (1L << (FINAL_ - 36)) | (1L << (PUBLIC_ - 36)) | (1L << (PROTECTED_ - 36)) | (1L << (PRIVATE_ - 36)) | (1L << (STATIC_ - 36)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public TerminalNode CLASS_() { return getToken(dartParser.CLASS_, 0); }
		public TerminalNode IDENTIFIER() { return getToken(dartParser.IDENTIFIER, 0); }
		public TerminalNode OBC() { return getToken(dartParser.OBC, 0); }
		public TerminalNode CBC() { return getToken(dartParser.CBC, 0); }
		public List<ClassBodyDeclarationContext> classBodyDeclaration() {
			return getRuleContexts(ClassBodyDeclarationContext.class);
		}
		public ClassBodyDeclarationContext classBodyDeclaration(int i) {
			return getRuleContext(ClassBodyDeclarationContext.class,i);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitClassDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitClassDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(CLASS_);
			setState(113);
			match(IDENTIFIER);
			setState(114);
			match(OBC);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 36)) & ~0x3f) == 0 && ((1L << (_la - 36)) & ((1L << (ABSTRACT_ - 36)) | (1L << (BOOLEAN - 36)) | (1L << (CHAR - 36)) | (1L << (CLASS_ - 36)) | (1L << (DOUBLE - 36)) | (1L << (FINAL_ - 36)) | (1L << (FLOAT - 36)) | (1L << (INT - 36)) | (1L << (LONG - 36)) | (1L << (PUBLIC_ - 36)) | (1L << (PROTECTED_ - 36)) | (1L << (PRIVATE_ - 36)) | (1L << (STATIC_ - 36)) | (1L << (STRING_ - 36)) | (1L << (VOID_ - 36)))) != 0)) {
				{
				{
				setState(115);
				classBodyDeclaration();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(CBC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassBodyDeclarationContext extends ParserRuleContext {
		public ClassBodyDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBodyDeclaration; }
	 
		public ClassBodyDeclarationContext() { }
		public void copyFrom(ClassBodyDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VariableDeclarationClassBodyContext extends ClassBodyDeclarationContext {
		public LocalVariableDeclarationContext localVariableDeclaration() {
			return getRuleContext(LocalVariableDeclarationContext.class,0);
		}
		public TerminalNode SC() { return getToken(dartParser.SC, 0); }
		public VariableDeclarationClassBodyContext(ClassBodyDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterVariableDeclarationClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitVariableDeclarationClassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitVariableDeclarationClassBody(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MethodDeclarationClassBodyContext extends ClassBodyDeclarationContext {
		public MethodDeclarationContext methodDeclaration() {
			return getRuleContext(MethodDeclarationContext.class,0);
		}
		public List<ClassOrInterfaceModifierContext> classOrInterfaceModifier() {
			return getRuleContexts(ClassOrInterfaceModifierContext.class);
		}
		public ClassOrInterfaceModifierContext classOrInterfaceModifier(int i) {
			return getRuleContext(ClassOrInterfaceModifierContext.class,i);
		}
		public MethodDeclarationClassBodyContext(ClassBodyDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterMethodDeclarationClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitMethodDeclarationClassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitMethodDeclarationClassBody(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ClassDeclarationClassBodyContext extends ClassBodyDeclarationContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public List<ClassOrInterfaceModifierContext> classOrInterfaceModifier() {
			return getRuleContexts(ClassOrInterfaceModifierContext.class);
		}
		public ClassOrInterfaceModifierContext classOrInterfaceModifier(int i) {
			return getRuleContext(ClassOrInterfaceModifierContext.class,i);
		}
		public ClassDeclarationClassBodyContext(ClassBodyDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterClassDeclarationClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitClassDeclarationClassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitClassDeclarationClassBody(this);
			else return visitor.visitChildren(this);
		}
	}
